[build-system]
requires = [
    "setuptools >=77.0.0",
    "packaging",
    "cython >=3.1",
    "numpy >=2",
]
build-backend = "setuptools.build_meta"


[project]
name = "pyepr"
authors = [
    {name = "Antonio Valentino", email = "antonio.valentino@tiscali.it"},
]
description = "Python ENVISAT Product Reader API"
requires-python = ">=3.10, <4"
keywords = ["satellite", "reader", "envisat"]
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt", "LICENSES/*"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy >=1.26.4",
]
dynamic = ["version"]


[project.readme]
text = """\
PyEPR provides Python_ bindings for the ENVISAT_ Product Reader C API
(`EPR API`_) for reading satellite data from ENVISAT_
ESA_ (European Space Agency) mission.

PyEPR, as well as the `EPR API`_ for C, supports ENVISAT_ MERIS, AATSR
Level 1B and Level 2 and also ASAR data products. It provides access to
the data either on a geophysical (decoded, ready-to-use pixel samples)
or on a raw data layer. The raw data access makes it possible to read
any data field contained in a product file.

.. _Python: https://www.python.org
.. _`EPR API`: https://github.com/bcdev/epr-api
.. _ENVISAT: https://earth.esa.int/eogateway/missions/envisat
.. _ESA: https://earth.esa.int
"""
content-type = "text/x-rst"


[project.urls]
Homepage = "https://github.com/avalentino/pyepr"
Documentation = "https://pyepr.readthedocs.io"
Repository = "https://github.com/avalentino/pyepr.git"
Changelog = "https://pyepr.readthedocs.io/en/latest/NEWS.html"
Issues = "https://github.com/avalentino/pyepr/issues"


[dependency-groups]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-spelling",
    "packaging",
    "ipython",
]
test = ["pytest", "packaging"]
coverage = ["pytest-cov", "coverage[toml]", "cython", {include-group = "test"}]
lint = ["flake8", "pydocstyle", "isort", "black", "ruff", "mypy", "codespell"]
dev = [
    "python-build",
    "twine",
    "setuptools >=77",
    "packaging",
    "cython >=3",
    "numpy >=2",
    {include-group = "docs"},
    {include-group = "test"},
    {include-group = "coverage"},
    {include-group = "lint"},
]


[tool.setuptools]
packages = ["epr"]
package-dir = {"" = "src"}


[tool.setuptools.dynamic]
version = {attr = "epr.__version__"}


[tool.setuptools.package-data]
epr = ["py.typed", "*.pyi"]


[tool.cibuildwheel]
skip = "pp*"
enable = ["cpython-freethreading"]
test-requires = "pytest"
test-command = "pytest -v {project}/tests"


[tool.pytest.ini_options]
addopts = [
    # "--ignore=examples/",
    "--import-mode=importlib",
]
# markers = [
    # "webtest: mark a test as a webtest.",
    # builtin markers
    # "slow: mark test as slow to run.",
    # "remote_data: Apply to tests that require data from remote servers.",
    # "hugemem: mark test as using a lot of memory.",
# ]

[tool.coverage.run]
branch = true
plugins = ["Cython.Coverage"]
source = ["epr"]


[tool.black]
line-length = 79
preview = true
enable-unstable-feature = [
    "hug_parens_with_braces_and_square_brackets",
    "multiline_string_handling",
    "string_processing",
    "wrap_long_dict_values_in_parens",
]
# target-version = ['py310']
# extend-exclude = "packagename/parse/*"


[tool.isort]
profile = "black"
length_sort = true
multi_line_output = 3
no_inline_sort = true
include_trailing_comma = true
use_parentheses = true
line_length = 79
# force_grid_wrap = 0
# ensure_newline_before_comments = true
known_first_party = ["epr"]
# skip_glob = ["packagename/parse/*"]


[tool.pydocstyle]
# convention = "numpy"
add-ignore = ["D105"]
# add-ignore = ["D105", "D107"]
match='(?!(test_|conf)).*\.py'


[tool.codespell]
skip = "*.pdf,*.ipynb,./docs/spelling_wordlist.txt,*.N1,extern,./src/epr/*.c,./docs/_build,./htmlcov"
count = true
quiet-level = 3
# ignore-words-list = ""
ignore-words="docs/spelling_wordlist.txt"


[tool.mypy]
exclude = [
    "^docs/conf\\.py$",
]


[tool.ruff]
line-length = 79
# indent-width = 4
# target-version = "py310"
extend-exclude = ["docs/conf.py"]


[tool.ruff.lint]
preview = true
select = [
    # ruff --version  # ruff 0.11.6
    "E",        #  E/W pycodestyle
    "W",        #  E/W pycodestyle
    "F",        #    F Pyflakes
    "D",        #    D pydocstyle
    "N",        #    N pep8-naming
    "I",        #    I isort
    "C90",      #  C90 mccabe
    "UP",       #   UP pyupgrade
    # --- flake8 ---
    "YTT",      #  YTT flake8-2020
    # "ANN",    #  ANN flake8-annotations
    # "ASYNC",  #ASYNC flake8-async
    # "S",      #    S flake8-bandit
    "BLE",      #  BLE flake8-blind-except
    "FBT",      #  FBT flake8-boolean-trap
    "B",        #    B flake8-bugbear
    "A",        #    A flake8-builtins
    # "COM",    #  COM flake8-commas
    "C4",       #   C4 flake8-comprehensions
    # "CPY",    #  CPY flake8-copyright
    "DTZ",      #  DTZ flake8-datetimez
    "T10",      #  T10 flake8-debugger
    "DJ",       #   DJ flake8-django
    # "EM",     #   EM flake8-errmsg
    "EXE",      #  EXE flake8-executable
    # "FIX",    #  FIX flake8-fixme         # manual
    "FA",       #   FA flake8-future-annotations
    # "INT",    #  INT flake8-gettext
    "ISC",      #  ISC flake8-implicit-str-concat
    "ICN",      #  ICN flake8-import-conventions
    # "LOG",    #  LOG flake8-logging
    "G",        #    G flake8-logging-format
    "INP",      #  INP flake8-no-pep420
    "PIE",      #  PIE flake8-pie
    "T20",      #  T20 flake8-print
    "PYI",      #  PYI flake8-pyi
    # "PT",     #   PT flake8-pytest-style  # manual
    "Q",        #    Q flake8-quotes
    "RSE",      #  RSE flake8-raise
    "RET",      #  RET flake8-return
    "SLF",      #  SLF flake8-self
    "SIM",      #  SIM flake8-simplify
    "SLOT",     # SLOT flake8-slots
    "TID",      #  TID flake8-tidy-imports
    # "TD",     #   TD flake8-todos
    # "TC",     #   TC flake8-type-checking
    "ARG",      #  ARG flake8-unused-arguments
    "PTH",      #  PTH flake8-use-pathlib
    # --- misc ---
    # "AIR",    #  AIR Airflow
    # "ERA",    #  ERA eradicate             # manual
    # "FAST",   # FAST FastAPI
    "FLY",      #  FLY flynt
    "NPY",      #  NPY NumPy-specific rules
    # "PD",     #   PD pandas-vet
    "PERF",     # PERF Perflint
    # "DOC",    #  DOC pydoclint
    "PGH",      #  PGH pygrep-hooks
    "PL",       #   PL Pylint
    # "FURB",   # FURB refurb                # --preview
    "RUF",      #  RUF Ruff-specific rules
    # "TRY",    #  TRY tryceratops           # manual
]
extend-ignore = [
    # "D105",     # D105 Missing docstring in magic method
    # "D107",     # D107 Missing docstring in `__init__`
    "D203",     # D203 1 blank line required before class docstring
    "D213",     # D213 Multi-line docstring summary should start at the second line
    # "ISC001",   # ISC001 Implicitly concatenated string literals on one line
    # "PLR2004",  # PLR2004 Magic value used in comparison, consider replacing 2 with a constant variable
    # "PLR0913",  # PLR0913 Too many arguments in function definition
    # "PLW1514",  # PLW1514 `open` in text mode without explicit `encoding` argument
    # "RET504",   # RET504 Unnecessary assignment before `return` statement
    # "RET505",   # RET505 Unnecessary `elif` after `return` statement
]


[tool.ruff.format]
preview = true
docstring-code-format = true


[tool.ruff.lint.per-file-ignores]
"setup.py" = ["D", "N806", "PLC0415", "PTH110", "PTH118", "PTH207", "T201"]
"tests/*" = ["D"]
"tests/test_all.py" = ["RUF012", "T201"]
"docs/conf.py" = ["A001", "D", "INP001", "N812", "PLC0415", "PTH123"]
"docs/examples/export_gdalvrt.py" = ["D", "PTH110", "PTH122", "T201"]
"docs/examples/write_bands.py" = ["D", "PTH123", "PLR2004", "PTH118", "T201"]
"docs/examples/write_bitmask.py" = ["D", "PLR2004", "PTH123", "T201"]
"docs/examples/write_ndvi.py" = ["D", "PLR0914", "PLR2004", "PTH123", "T201"]
"docs/examples/update_elements.py" = ["D"]


[tool.ruff.lint.isort]
length-sort = true
known-first-party = ["epr"]


[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"xml.etree.ElementTree" = "etree"


# [tool.ruff.lint.pydocstyle]
# convention = "numpy"  # Accepts: "google", "numpy", or "pep257".
